packages/yew-macro/tests/classes_macro/classes-fail.stderr
error: expected `,`
 --> tests/classes_macro/classes-fail.rs:7:20
  |
7 |     classes!("one" "two");
  |                    ^^^^^

error: string literals must not contain more than one class (hint: use `"two", "three"`)
  --> tests/classes_macro/classes-fail.rs:18:21
   |
18 |     classes!("one", "two three", "four");
   |                     ^^^^^^^^^^^

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
 --> tests/classes_macro/classes-fail.rs:4:14
  |
4 |     classes!(42);
  |              ^^ the trait `From<{integer}>` is not implemented for `Classes`
  |
  = help: the following other types implement trait `From<T>`:
            <Classes as From<Cow<'static, str>>>
            <Classes as From<implicit_clone::unsync::string::IString>>
            <Classes as From<Vec<T>>>
            <Classes as From<String>>
            <Classes as From<Option<T>>>
            <Classes as From<[T; SIZE]>>
            <Classes as From<&String>>
            <Classes as From<&implicit_clone::unsync::string::IString>>
          and $N others
  = note: required for `{integer}` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
 --> $WORKSPACE/packages/yew/src/html/classes.rs
  |
  |     pub fn push<T: Into<Self>>(&mut self, class: T) {
  |                    ^^^^^^^^^^ required by this bound in `Classes::push`

error[E0277]: the trait bound `Classes: From<{float}>` is not satisfied
 --> tests/classes_macro/classes-fail.rs:5:14
  |
5 |     classes!(42.0);
  |              ^^^^ the trait `From<{float}>` is not implemented for `Classes`
  |
  = help: the following other types implement trait `From<T>`:
            <Classes as From<Cow<'static, str>>>
            <Classes as From<implicit_clone::unsync::string::IString>>
            <Classes as From<Vec<T>>>
            <Classes as From<String>>
            <Classes as From<Option<T>>>
            <Classes as From<[T; SIZE]>>
            <Classes as From<&String>>
            <Classes as From<&implicit_clone::unsync::string::IString>>
          and $N others
  = note: required for `{float}` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
 --> $WORKSPACE/packages/yew/src/html/classes.rs
  |
  |     pub fn push<T: Into<Self>>(&mut self, class: T) {
  |                    ^^^^^^^^^^ required by this bound in `Classes::push`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
 --> tests/classes_macro/classes-fail.rs:9:14
  |
9 |     classes!(vec![42]);
  |              ---^^^^^
  |              |
  |              the trait `From<{integer}>` is not implemented for `Classes`
  |              required by a bound introduced by this call
  |
  = help: the following other types implement trait `From<T>`:
            <Classes as From<Cow<'static, str>>>
            <Classes as From<implicit_clone::unsync::string::IString>>
            <Classes as From<Vec<T>>>
            <Classes as From<String>>
            <Classes as From<Option<T>>>
            <Classes as From<[T; SIZE]>>
            <Classes as From<&String>>
            <Classes as From<&implicit_clone::unsync::string::IString>>
          and $N others
  = note: required for `{integer}` to implement `Into<Classes>`
  = note: required for `Classes` to implement `From<Vec<{integer}>>`
  = note: 1 redundant requirement hidden
  = note: required for `Vec<{integer}>` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
 --> $WORKSPACE/packages/yew/src/html/classes.rs
  |
  |     pub fn push<T: Into<Self>>(&mut self, class: T) {
  |                    ^^^^^^^^^^ required by this bound in `Classes::push`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
  --> tests/classes_macro/classes-fail.rs:13:14
   |
13 |     classes!(some);
   |              ^^^^ the trait `From<{integer}>` is not implemented for `Classes`
   |
   = help: the following other types implement trait `From<T>`:
             <Classes as From<Cow<'static, str>>>
             <Classes as From<implicit_clone::unsync::string::IString>>
             <Classes as From<Vec<T>>>
             <Classes as From<String>>
             <Classes as From<Option<T>>>
             <Classes as From<[T; SIZE]>>
             <Classes as From<&String>>
             <Classes as From<&implicit_clone::unsync::string::IString>>
           and $N others
   = note: required for `{integer}` to implement `Into<Classes>`
   = note: required for `Classes` to implement `From<Option<{integer}>>`
   = note: 1 redundant requirement hidden
   = note: required for `Option<{integer}>` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
  --> $WORKSPACE/packages/yew/src/html/classes.rs
   |
   |     pub fn push<T: Into<Self>>(&mut self, class: T) {
   |                    ^^^^^^^^^^ required by this bound in `Classes::push`

error[E0277]: the trait bound `Classes: From<u32>` is not satisfied
  --> tests/classes_macro/classes-fail.rs:14:14
   |
14 |     classes!(none);
   |              ^^^^ the trait `From<u32>` is not implemented for `Classes`
   |
   = help: the following other types implement trait `From<T>`:
             <Classes as From<Cow<'static, str>>>
             <Classes as From<implicit_clone::unsync::string::IString>>
             <Classes as From<Vec<T>>>
             <Classes as From<String>>
             <Classes as From<Option<T>>>
             <Classes as From<[T; SIZE]>>
             <Classes as From<&String>>
             <Classes as From<&implicit_clone::unsync::string::IString>>
           and $N others
   = note: required for `u32` to implement `Into<Classes>`
   = note: required for `Classes` to implement `From<Option<u32>>`
   = note: 1 redundant requirement hidden
   = note: required for `Option<u32>` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
  --> $WORKSPACE/packages/yew/src/html/classes.rs
   |
   |     pub fn push<T: Into<Self>>(&mut self, class: T) {
   |                    ^^^^^^^^^^ required by this bound in `Classes::push`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
  --> tests/classes_macro/classes-fail.rs:16:21
   |
16 |     classes!("one", 42);
   |                     ^^ the trait `From<{integer}>` is not implemented for `Classes`
   |
   = help: the following other types implement trait `From<T>`:
             <Classes as From<Cow<'static, str>>>
             <Classes as From<implicit_clone::unsync::string::IString>>
             <Classes as From<Vec<T>>>
             <Classes as From<String>>
             <Classes as From<Option<T>>>
             <Classes as From<[T; SIZE]>>
             <Classes as From<&String>>
             <Classes as From<&implicit_clone::unsync::string::IString>>
           and $N others
   = note: required for `{integer}` to implement `Into<Classes>`
note: required by a bound in `Classes::push`
  --> $WORKSPACE/packages/yew/src/html/classes.rs
   |
   |     pub fn push<T: Into<Self>>(&mut self, class: T) {
   |                    ^^^^^^^^^^ required by this bound in `Classes::push`
